fix(@clayui/css): LPD-66602 Lower sticky-* z-index to 989

--- a/packages/clay-css/src/scss/cadmin/variables/_globals-z-index.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_globals-z-index.scss
@@ -1,5 +1,5 @@
 $cadmin-zindex-dropdown: 1000 !default;
-$cadmin-zindex-sticky: 1020 !default;
+$cadmin-zindex-sticky: 989 !default;
 $cadmin-zindex-fixed: 1030 !default;
 $cadmin-zindex-modal-backdrop: 1040 !default;
 $cadmin-zindex-modal: 1050 !default;
