--- a/packages/clay-css/src/scss/variables/_globals-z-index.scss
+++ b/packages/clay-css/src/scss/variables/_globals-z-index.scss
@@ -1,5 +1,5 @@
 $zindex-dropdown: 1000 !default;
-$zindex-sticky: 1020 !default;
+$zindex-sticky: 989 !default;
 $zindex-fixed: 1030 !default;
 $zindex-modal-backdrop: 1040 !default;
 $zindex-modal: 1050 !default;
